--- a/SitoWeb/index.html
+++ b/SitoWeb/index.html
@@ -1,27 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="Sources/Styles/general.css">
+    <link rel="stylesheet" href="Sources/Styles/navbar.css">
+
+    <!-- Font and icons Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- connect to google apis -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- connect to google static fonts -->
+    <!-- import icons -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
+    <!-- import Josefin Sans font -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,400&display=swap"
+        rel="stylesheet">
+    <!-- Ends Fonts -->
+
+    <meta name="keywords" content="Comunismo, Stalin, Socialismo, Sovietico, Partito Comunista, Comunista, Falce e Martello, Rosso...">
+
+    <title> Comunismo | Manifesto Stalinista | Home</title>
 </head>
+
 <body>
-    <header class="flex or"> 
-        <div class="section flex">
+    <header class="flex or">
+        <div class="section">
             <!--immagine stalin profilo-->
-            <img src="#" alt="immagineStalin" class="logo">
+            <img src="Sources/Images/logoStalin.jpg" alt="immagineStalin" class="logo">
         </div>
-        <div class="section flex">
+        <div class="section">
             <!--titolo pagina-->
             <h1 class="primary"> Il Manifesto Stalinista</h1>
         </div>
-        <div class="section flex">
+        <div class="section">
+            <button class="nav-activator">
+                <span class="material-symbols-outlined">
+                    menu
+                </span>
+            </button>
             <!--nav bar-->
-            <div class="nav flex">
-
+            <div class="nav flex or">
                 <div class="nav-section">
-                    <a href="#" class="nav-link">
+                    <a href="" class="nav-link">
                         <span class="nav-item"> Home </span>
                     </a>
                 </div>
@@ -34,7 +58,7 @@
 
                 <div class="nav-section">
                     <a href="#" class="nav-link">
-                        <span class="nav-item"> Aspetto pubblico </span>
+                        <span class="nav-item"> Aspetto </span>
                     </a>
                 </div>
 
@@ -46,21 +70,28 @@
 
                 <div class="nav-section">
                     <a href="#" class="nav-link">
-                        <span class="nav-item"> Propaganda  </span>
+                        <span class="nav-item"> Propaganda </span>
+                    </a>
+                </div>
+
+                <div class="nav-section">
+                    <a href="#" class="nav-link">
+                        <span class="nav-item"> Chi siamo </span>
                     </a>
                 </div>
             </div>
         </div>
-        <div class="section flex">
+        <div class="section">
             <!--search bar-->
             <div class="search-bar">
-                <button class="search-button">
-                    s
-                </button>
-                <input type="text" class="search-input">
-
+                <div>
+                    <img class="search-icon" src="Sources/Images/hammerAndSickle.png">
+                    <span class="tooltip"> Search </span>
+                </div>
+                <input type="text" class="search-input" placeholder="Search on site...">
             </div>
         </div>
     </header>
 </body>
+
 </html>
