--- a/SitoWeb/Sources/Pages/propaganda.html
+++ b/SitoWeb/Sources/Pages/propaganda.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Sources/Styles/general.css">
-    <link rel="stylesheet" href="Sources/Styles/navbar.css">
+    <link rel="stylesheet" href="../Styles/general.css">
+    <link rel="stylesheet" href="../Styles/navbar.css">
+    <link rel="stylesheet" href="../Styles/summary.css">
 
     <!-- Font and icons Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- connect to google apis -->
@@ -23,14 +24,14 @@
 
     <meta name="keywords" content="Comunismo, Stalin, Socialismo, Sovietico, Partito Comunista, Comunista, Falce e Martello, Rosso...">
 
-    <title> Comunismo | Manifesto Stalinista | Home</title>
+    <title> Comunismo | Manifesto Stalinista | Propaganda</title>
 </head>
 
 <body>
     <header class="flex or">
         <div class="section">
             <!--immagine stalin profilo-->
-            <img src="Sources/Images/logoStalin.jpg" alt="immagineStalin" class="logo">
+            <img src="../Images/logoStalin.jpg" alt="immagineStalin" class="logo">
         </div>
         <div class="section">
             <!--titolo pagina-->
@@ -45,31 +46,31 @@
             <!--nav bar-->
             <div class="nav flex or">
                 <div class="nav-section">
-                    <a href="index.html" class="nav-link">
+                    <a href="../../index.html" class="nav-link">
                         <span class="nav-item"> Home </span>
                     </a>
                 </div>
 
                 <div class="nav-section">
-                    <a href="Sources/Pages/terminologia.html" class="nav-link">
+                    <a href="terminologia.html" class="nav-link">
                         <span class="nav-item"> Terminologia </span>
                     </a>
                 </div>
 
                 <div class="nav-section">
-                    <a href="Sources/Pages/aspetto.html" class="nav-link">
+                    <a href="aspetto.html" class="nav-link">
                         <span class="nav-item"> Aspetto </span>
                     </a>
                 </div>
 
                 <div class="nav-section">
-                    <a href="Sources/Pages/comunicazione.html" class="nav-link">
+                    <a href="comunicazione.html" class="nav-link">
                         <span class="nav-item"> Comunicazione </span>
                     </a>
                 </div>
 
                 <div class="nav-section">
-                    <a href="Sources/Pages/propaganda.html" class="nav-link">
+                    <a href="#" class="nav-link">
                         <span class="nav-item"> Propaganda </span>
                     </a>
                 </div>
@@ -85,13 +86,20 @@
             <!--search bar-->
             <div class="search-bar">
                 <div>
-                    <img class="search-icon" src="Sources/Images/hammerAndSickle.png">
+                    <img class="search-icon" src="../Images/hammerAndSickle.png">
                     <span class="tooltip"> Search </span>
                 </div>
                 <input type="text" class="search-input" placeholder="Search on site...">
             </div>
         </div>
     </header>
+    <div class="main-title">
+        <h1>LA PROPAGANDA NEL REGIME</h1>
+    </div>
+
+    <footer>
+        <!--*Still missin*-->
+    </footer>
 </body>
 
 </html>
