oh raga ho finito

--- a/SitoWeb/Sources/Pages/chiSiamo.html
+++ b/SitoWeb/Sources/Pages/chiSiamo.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Styles/general.css">
     <link rel="stylesheet" href="../Styles/navbar.css">
-    <link rel="stylesheet" href="../Styles/summary.css">
+    <link rel="stylesheet" href="../Styles/chiSiamoStyle.css">
 
     <!-- Font and icons Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- connect to google apis -->
@@ -24,7 +24,9 @@
 
     <meta name="keywords" content="Comunismo, Stalin, Socialismo, Sovietico, Partito Comunista, Comunista, Falce e Martello, Rosso...">
 
-    <title> Comunismo | Manifesto Stalinista | Comunicazione</title>
+    <link rel="stylesheet" href="../Styles/propaganda.css">
+
+    <title> Comunismo | Manifesto Stalinista | Chi siamo?</title>
 </head>
 
 <body>
@@ -64,7 +66,7 @@
                 </div>
 
                 <div class="nav-section">
-                    <a href="" class="nav-link">
+                    <a href="comunicazione.html" class="nav-link">
                         <span class="nav-item"> Comunicazione </span>
                     </a>
                 </div>
@@ -76,7 +78,7 @@
                 </div>
 
                 <div class="nav-section">
-                    <a href="chiSiamo.html" class="nav-link">
+                    <a href="" class="nav-link">
                         <span class="nav-item"> Chi siamo </span>
                     </a>
                 </div>
@@ -94,39 +96,64 @@
         </div>
     </header>
     <div class="main-title">
-        <h1>MODALITA' E MEZZI DI COMUNICAZIONE</h1>
+        <h1>CHI SIAMO?</h1>
     </div>
-
-    <div class="noImmagination">
-        <div class="noImmagination-section">
-            <h1>Title qualcosa</h1>
-        </div>
-        <div class="noImmagination-section">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure velit totam voluptas illo perferendis necessitatibus fugiat officia vero. Ex natus veritatis officia corporis quibusdam eos molestias repellat amet sequi molestiae.</p>
-        </div>
+    <div class="group">
+        <img src="../Images/sesonof.jpg" alt="" class="person">
+        <img src="../Images/vecchiovecchiovecchiovecchiovecchiovecchiovecchiovecchiovecchiovecchiovecchio.png" alt="" class="person">
+        <img src="../Images/bellaguidocomeva.png" alt="" class="person">
+        <img src="../Images/tupla.png" alt="" class="person">
+        <img src="../Images/cavoloframaseiavantitebravo.png" alt="" class="honor">
+        <img src="../Images/purtroppo non ti caganessuno.png" alt="" class="honor">
+        <img src="../Images/tunonseiservitoaniente.png" alt="" class="honor">
+        <img src="../Images/tuanchedimeno.png" alt="" class="honor">
+    </div>
+    <div class="group-description">
+        <h4>Daniele Salvarani <br> Generalissimo dell'Unione Sovietica</h4>
+        <h4>Tadas Mirko Tincani <br> Maresciallo dell'Unione Sovietica</h4>
+        <h4>Riccardo Guidotti <br> Generale dell'Esercito</h4>
+        <h4>Luca Turrini <br> Colonnello</h4>
+    </div>
+    <div class="contacts">
+        <h1>E-MAIL E SOCIAL PER CONTATTARCI:</h1>
+        <ul>
+            <li>
+                <h3> Daniele Salvarni </h3> <br> <p>E-mail: <a href="salvarani.daniele.commerciale@gmail.com">salvarani.daniele.commerciale@gmail.com</a> <br> Instagram: <a href="https://www.instagram.com/salvarani_/">_salvarani</a> </p> 
+            </li>
+            <li>
+                <h3> Tadas Mirko Tincani </h3> <br> <p>E-mail: <a href="tincani.mirko.tadas.commerciale@gmail.com">tincani.mirko.tadas.commerciale@gmail.com</a> <br> Instagram: <a href="https://www.instagram.com/vikings_sw/">vikings_sw</a> </p> 
+            </li>
+            <li>
+                <h3> Riccardo Guidotti </h3> <br> <p>E-mail: <a href="guidotti.riccardo.commerciale@gmail.com">guidotti.riccardo.commerciale@gmail.com</a> <br> Instagram: <a href="https://www.instagram.com/riccardo.guidottii/">riccardo.guidottii</a> </p> 
+            </li>
+            <li>
+                <h3> Luca Turrini </h3> <br> <p>E-mail: <a href="turrini.luca.commerciale@gmail.com">turrini.luca.commerciale@gmail.com</a> <br> Instagram: <a href="https://www.instagram.com/luca__turrini/">luca__turrini</a> </p> 
+            </li>
+        </ul>
     </div>
     <footer>
-        <h2>Contatti:</h2>
-        <ul>
-            <li>
-                E-mail: <a href="propaganda.stalinista.info.commerciale@gmail.com">propaganda.stalinista.info.commerciale@gmail.com</a>
-            </li>
-            <li>
-                Social:  <a href="https://www.instagram.com/propaganda.stalinista">propaganda.stalinista</a>
-            </li>
-        </ul>
-        <h2>Fonti:</h2>
-        <ul>
-            <li>
-                <a href="">fonte n°1</a>
-            </li>
-            <li>
-                <a href="">fonte n°1</a>
-            </li>
-            <li>
-                <a href="">fonte n°1</a>
-            </li>
-        </ul>
+            <h2>Contatti:</h2>
+            <ul>
+                <li>
+                    E-mail: <a
+                        href="propaganda.stalinista.info.commerciale@gmail.com">propaganda.stalinista.info.commerciale@gmail.com</a>
+                </li>
+                <li>
+                    Social: <a href="https://www.instagram.com/propaganda.stalinista">propaganda.stalinista</a>
+                </li>
+            </ul>
+            <h2>Fonti:</h2>
+            <ul>
+                <li>
+                    <a href="">fonte n°1</a>
+                </li>
+                <li>
+                    <a href="">fonte n°1</a>
+                </li>
+                <li>
+                    <a href="">fonte n°1</a>
+                </li>
+            </ul>
     </footer>
 </body>
 
