--- a/SitoWeb/index.html
+++ b/SitoWeb/index.html
@@ -75,7 +75,7 @@
                 </div>
 
                 <div class="nav-section">
-                    <a href="#" class="nav-link">
+                    <a href="Sources/Pages/chiSiamo.html" class="nav-link">
                         <span class="nav-item"> Chi siamo </span>
                     </a>
                 </div>
@@ -92,6 +92,30 @@
             </div>
         </div>
     </header>
+    
+    <footer>
+        <h2>Contatti:</h2>
+        <ul>
+            <li>
+                E-mail: <a href="propaganda.stalinista.info.commerciale@gmail.com">propaganda.stalinista.info.commerciale@gmail.com</a>
+            </li>
+            <li>
+                Social:  <a href="https://www.instagram.com/propaganda.stalinista">propaganda.stalinista</a>
+            </li>
+        </ul>
+        <h2>Fonti:</h2>
+        <ul>
+            <li>
+                <a href="">fonte n°1</a>
+            </li>
+            <li>
+                <a href="">fonte n°1</a>
+            </li>
+            <li>
+                <a href="">fonte n°1</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
