--- a/SitoWeb/Sources/Pages/propaganda.html
+++ b/SitoWeb/Sources/Pages/propaganda.html
@@ -24,6 +24,8 @@
 
     <meta name="keywords" content="Comunismo, Stalin, Socialismo, Sovietico, Partito Comunista, Comunista, Falce e Martello, Rosso...">
 
+    <link rel="stylesheet" href="../Styles/propaganda.css">
+
     <title> Comunismo | Manifesto Stalinista | Propaganda</title>
 </head>
 
@@ -70,13 +72,13 @@
                 </div>
 
                 <div class="nav-section">
-                    <a href="#" class="nav-link">
+                    <a href="" class="nav-link">
                         <span class="nav-item"> Propaganda </span>
                     </a>
                 </div>
 
                 <div class="nav-section">
-                    <a href="#" class="nav-link">
+                    <a href="chiSiamo.html" class="nav-link">
                         <span class="nav-item"> Chi siamo </span>
                     </a>
                 </div>
@@ -96,9 +98,54 @@
     <div class="main-title">
         <h1>LA PROPAGANDA NEL REGIME</h1>
     </div>
-
+    <div class="somenthing">
+        <div class="side">
+            <div class="side-section">
+                <div class="father-side">
+                    Stalin come immagine di se voleva essere riconosciuto come il padre della nazione e della gioventù
+                    della stessa che nelle iconografie e anche realmente parlando ringraziavano Stalin per la loro infanzia e gioventù felici.
+                    <br> <br>
+                    Inoltre la stempa sovietica lo descriveva come "Grande", "Amato", "Audace", "Saggio", "Ispiratore" e "Genio", ed egli ela stampa dicevano che i lavoratori e i cittadini russi erano come "suoi figli".
+                    Stalin appunto si dipingeva e veniva dipinto dai suoi sostenitori come una sorta di padre amorevole sia per la sua nazione che per i bambini anche se non erano suoi, infatti si faceva spesso ritrarre insieme a dei bambini per rafforzare l'idea che lui fosse un padre amorevole sia per la nazione sia per i suoi cittadini.
+                </div>
+            </div>
+        </div>
+        <div class="side">
+            <div class="side-section">
+                <div class="father-side">
+                    Inoltre Stalin cercava di appunto stabilire una sorta di collegamento tra lui e i cittadini come se fosse uno di loro. Il culto basato poi su Stalin prenderà molto spunto da alcuni valori della chiesa
+                    ortodossa russa anche se in contrasto con i preti e le figure religiose della stessa.
+                    <br> <br>
+                    Come propaganda, Stalin veniva descritto come un compagno di Lenin e che ne aveva appreso ed ereditato i suoi insegnamenti e che quindi di lui ci si poteva assolutamente fidare.
+                    In realtà Stalin "soppresse" il testamento di Lenin poiché nonostante Stalin venisse proclamato come successore diretto e scelto di Lenin, nel testamento Lenin rifiutò e rinnegò completamente Stalin.
+                    Nel 1935 nelle scuole i bambini ripetevano spesso la frase: "Grazie amato Stalin per un'infanzia felice", quella frase appariva in ogni scuola, asilo, orfanotrofio e anche nelle sfilate e festival dove
+                    i bambini recitavano questo slogan.
+                </div>
+            </div>
+        </div>
+    </div>
     <footer>
-        <!--*Still missin*-->
+        <h2>Contatti:</h2>
+        <ul>
+            <li>
+                E-mail: <a href="propaganda.stalinista.info.commerciale@gmail.com">propaganda.stalinista.info.commerciale@gmail.com</a>
+            </li>
+            <li>
+                Social:  <a href="https://www.instagram.com/propaganda.stalinista">propaganda.stalinista</a>
+            </li>
+        </ul>
+        <h2>Fonti:</h2>
+        <ul>
+            <li>
+                <a href="">fonte n°1</a>
+            </li>
+            <li>
+                <a href="">fonte n°1</a>
+            </li>
+            <li>
+                <a href="">fonte n°1</a>
+            </li>
+        </ul>
     </footer>
 </body>
 
